corrected html alignments

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -223,7 +223,7 @@ font: normal small Arial, Helvetica, sans-serif;
     position:fixed;
     z-index:2;
     width:100%;
-    top:88%;
+    top:77%;
 }
 .next_page img{
     width:20px;
@@ -425,6 +425,7 @@ font: normal small Arial, Helvetica, sans-serif;
 	min-height:50px;
 	background-color:#ddd;
 	width:100%;
-	position:absolute;
+	position:relative;
     bottom:0px;
+    padding: 0 20px;
 }
